--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -95,7 +95,33 @@ button{
     padding: 5px;
     border:1px solid #071b99;
 }
+.hora{
+    
+
+    margin-left: auto;
+    margin-right: auto ;
+}
 #obrigatorio{
     color: #dc0f04;
     font-weight: 600;
+}
+.item-session{
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+#resposta,.item-session{
+   
+    padding: 10px;
+    width: 400px;
+    
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.item-certo{
+    color: #071b99;
+}
+.item-error{
+   color:#c91818
 }
