--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -161,3 +161,13 @@ button {
     border: 1px solid black;
     border-radius: 8px;
 }
+.input-form{
+    
+    width: 480px;
+}
+.item-form{
+  
+
+    display: flex;
+    padding: 15px;
+}
