--- a/Semana5/styles.css
+++ b/Semana5/styles.css
@@ -48,7 +48,13 @@
     
     z-index: 10;
 }
+.reflesh:hover{
+    cursor: pointer;
+}
+.reflesh:active{
+    opacity: 0.5;
 
+}
 .picture
 {
     /* border: 1px solid black; */
@@ -104,4 +110,10 @@
     width: 62px;
     height: 50px;
    
+}
+.mais,.menos:hover{
+    cursor: pointer;
+}
+.mais,.menos:active{
+    
 }
