--- a/projetos/myapp/src/Components/Calculadora/styles.css
+++ b/projetos/myapp/src/Components/Calculadora/styles.css
@@ -28,16 +28,17 @@
     color: #0521ac;
     border-radius: 8px;
     font-weight: bold;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
-/* input{
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    width:96%;
-    height: 80px;
-} */
-
+span{
+    color:rgb(22, 1, 255);
+    font-size:1.0rem;
+    
+}
+.result{
+   height: 25px;
+    line-height: 15pt;
+}
 .grid {
     display: flex;
     flex-wrap: wrap;
